--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@supabase/supabase-js": "^2.38.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.13.0"
+    "zone.js": "~0.14.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.2.9",
@@ -39,6 +39,6 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
-    "typescript": "~5.1.3"
+    "typescript": "^5.2.2"
   }
 }
