--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^17.0.2",
     "@supabase/supabase-js": "^2.38.4",
     "rxjs": "~7.8.0",
+    "rxjs-interop": "link:@angular/core/rxjs-interop",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
   },
