--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^17.0.2",
     "@angular/platform-browser-dynamic": "^17.0.2",
     "@angular/router": "^17.0.2",
+    "@supabase/storage-js": "^2.5.4",
     "@supabase/supabase-js": "^2.38.4",
     "rxjs": "~7.8.0",
     "rxjs-interop": "link:@angular/core/rxjs-interop",
