--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,6 +3,15 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "type": "firefox",
+      "request": "launch",
+      "reAttach": true,
+      "name": "Launch localhost",
+      "preLaunchTask": "npm: start",
+      "url": "http://localhost:4200",
+      "webRoot": "${workspaceFolder}"
+    },
+    {
       "name": "Launch Chrome",
       "request": "launch",
       "type": "chrome",
