--- a/angular.json
+++ b/angular.json
@@ -57,6 +57,7 @@
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
               "@angular/material/prebuilt-themes/indigo-pink.css",
+              "src/indigo-dark-theme.scss",
               "src/styles.scss"
             ],
             "scripts": []
@@ -118,6 +119,7 @@
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
               "@angular/material/prebuilt-themes/pink-bluegrey.css",
+              "src/indigo-dark-theme.scss",
               "src/styles.css"
             ],
             "scripts": []
