--- a/angular.json
+++ b/angular.json
@@ -55,10 +55,7 @@
             "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
             "assets": ["src/favicon.ico", "src/assets"],
-            "styles": [
-              "@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.css"
-            ],
+            "styles": ["src/blurple-dark-theme.scss", "src/styles.scss"],
             "scripts": []
           },
           "configurations": {
@@ -116,10 +113,7 @@
             "polyfills": ["zone.js", "zone.js/testing"],
             "tsConfig": "tsconfig.spec.json",
             "assets": ["src/favicon.ico", "src/assets"],
-            "styles": [
-              "@angular/material/prebuilt-themes/pink-bluegrey.css",
-              "src/styles.css"
-            ],
+            "styles": ["src/blurple-dark-theme.scss", "src/styles.css"],
             "scripts": []
           }
         },
