--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,16 +3,15 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "name": "Launch Firefox (localhost)",
       "type": "firefox",
       "request": "launch",
       "reAttach": true,
-      "name": "Launch localhost",
-      "preLaunchTask": "npm: start",
       "url": "http://localhost:4200",
       "webRoot": "${workspaceFolder}"
     },
     {
-      "name": "Launch Chrome",
+      "name": "Launch Chrome (localhost)",
       "request": "launch",
       "type": "chrome",
       "url": "http://localhost:4200",
