--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^17.0.2",
     "@supabase/storage-js": "^2.5.4",
     "@supabase/supabase-js": "^2.38.4",
+    "ngx-image-cropper": "^7.1.2",
     "rxjs": "~7.8.0",
     "rxjs-interop": "link:@angular/core/rxjs-interop",
     "tslib": "^2.3.0",
