--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "lint": "ng lint",
-    "format": "ng lint --fix"
+    "format": "prettier src --write"
   },
   "private": true,
   "dependencies": {
